--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
     "swiper": "^11.2.7",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
