--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^19.0.0",
     "swiper": "^11.2.7",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
